--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -5,6 +5,7 @@ deny 103.109.101.105;
 deny 103.126.161.54;
 deny 103.163.218.11;
 deny 103.164.54.199;
+deny 103.174.253.222;
 deny 103.186.0.144;
 deny 103.193.179.233;
 deny 103.196.37.111;
@@ -1234,6 +1235,7 @@ deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
 deny 2a04:9dc0:31::c0cc:4d;
+deny 2a04:9dc0:31::c0cc:73;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -1485,6 +1487,7 @@ deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a10:c800:1:9cc6::1;
+deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:5940:13e2::2;
 deny 2a12:5940:144f::2;
@@ -1624,7 +1627,6 @@ deny 51.89.153.112;
 deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
-deny 52.1.38.137;
 deny 5.255.100.219;
 deny 5.255.100.227;
 deny 5.255.103.235;
@@ -1707,10 +1709,12 @@ deny 8.218.9.41;
 deny 82.197.182.161;
 deny 82.221.128.191;
 deny 82.221.131.5;
+deny 82.221.139.190;
 deny 82.68.49.227;
 deny 82.85.247.254;
 deny 83.217.9.73;
 deny 83.96.213.63;
+deny 83.97.20.115;
 deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.19.182.20;
@@ -1760,6 +1764,7 @@ deny 91.208.75.239;
 deny 91.208.75.4;
 deny 91.210.59.57;
 deny 91.219.236.101;
+deny 91.219.237.39;
 deny 91.219.237.56;
 deny 91.219.239.166;
 deny 91.92.109.126;
