--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -299,7 +299,6 @@ allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
-allow 185.181.60.135;
 allow 185.181.61.142;
 allow 185.183.157.214;
 allow 185.183.159.40;
@@ -952,6 +951,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
@@ -982,6 +982,7 @@ allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
@@ -1539,7 +1540,6 @@ allow 37.252.254.33;
 allow 37.252.255.135;
 allow 37.48.120.196;
 allow 38.97.116.244;
-allow 44.213.226.49;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1675,6 +1675,7 @@ allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.165.245.66;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
