--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -299,7 +299,6 @@ deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
-deny 185.181.60.135;
 deny 185.181.61.142;
 deny 185.183.157.214;
 deny 185.183.159.40;
@@ -952,6 +951,7 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
+deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.94.211.25;
 deny 2400:6180:100:d0::2c:3001;
@@ -982,6 +982,7 @@ deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:fc24:12:77c0::1;
 deny 2602:fc24:12:81a6::1;
@@ -1539,7 +1540,6 @@ deny 37.252.254.33;
 deny 37.252.255.135;
 deny 37.48.120.196;
 deny 38.97.116.244;
-deny 44.213.226.49;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
@@ -1675,6 +1675,7 @@ deny 5.2.67.226;
 deny 5.2.72.110;
 deny 5.2.79.190;
 deny 5.34.182.203;
+deny 54.165.245.66;
 deny 5.42.80.232;
 deny 5.42.80.233;
 deny 5.42.80.234;
