--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -299,7 +299,6 @@ set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
-set_real_ip_from 185.181.60.135;
 set_real_ip_from 185.181.61.142;
 set_real_ip_from 185.183.157.214;
 set_real_ip_from 185.183.159.40;
@@ -952,6 +951,7 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 2400:6180:100:d0::2c:3001;
@@ -982,6 +982,7 @@ set_real_ip_from 2600:3c08::f03c:94ff:fef8:9872;
 set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:fc24:12:77c0::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
@@ -1539,7 +1540,6 @@ set_real_ip_from 37.252.254.33;
 set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 44.213.226.49;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1675,6 +1675,7 @@ set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
+set_real_ip_from 54.165.245.66;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
