--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -207,7 +207,6 @@ allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
 allow 173.0.3.111;
-allow 173.249.57.253;
 allow 176.114.248.225;
 allow 176.118.193.33;
 allow 176.121.81.51;
@@ -509,6 +508,7 @@ allow 185.225.69.232;
 allow 185.227.134.106;
 allow 185.227.68.78;
 allow 185.233.100.23;
+allow 185.241.208.115;
 allow 185.241.208.196;
 allow 185.241.208.202;
 allow 185.241.208.204;
@@ -681,7 +681,6 @@ allow 198.96.155.3;
 allow 198.98.48.31;
 allow 198.98.48.33;
 allow 198.98.48.35;
-allow 198.98.50.199;
 allow 198.98.50.215;
 allow 198.98.51.189;
 allow 198.98.51.249;
@@ -913,6 +912,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
@@ -943,6 +943,7 @@ allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
@@ -962,7 +963,6 @@ allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
-allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
@@ -1101,7 +1101,6 @@ allow 2a02:418:6017::148;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c206:2095:2624::1;
-allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
 allow 2a03:3b40:fe:3b1::1;
@@ -1445,6 +1444,7 @@ allow 31.133.0.26;
 allow 31.133.0.36;
 allow 31.133.1.14;
 allow 31.42.185.134;
+allow 3.229.20.55;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.120.190.85;
@@ -1460,7 +1460,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.214.207.117;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1471,9 +1470,11 @@ allow 45.131.65.34;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
+allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
 allow 45.138.16.213;
+allow 45.138.16.222;
 allow 45.138.16.230;
 allow 45.138.16.240;
 allow 45.138.16.249;
@@ -1485,6 +1486,7 @@ allow 45.139.122.178;
 allow 45.139.122.179;
 allow 45.141.215.110;
 allow 45.141.215.111;
+allow 45.141.215.114;
 allow 45.141.215.167;
 allow 45.141.215.169;
 allow 45.141.215.17;
@@ -1523,6 +1525,7 @@ allow 45.80.208.213;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.9.148.113;
+allow 45.94.31.180;
 allow 45.94.31.68;
 allow 45.95.169.130;
 allow 45.95.169.223;
@@ -1641,7 +1644,6 @@ allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.82.78.14;
-allow 80.94.92.106;
 allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.118.242.62;
@@ -1651,7 +1653,6 @@ allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
-allow 82.68.49.227;
 allow 82.85.247.254;
 allow 83.217.9.73;
 allow 83.96.213.63;
