--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -207,7 +207,6 @@ set_real_ip_from 172.81.131.139;
 set_real_ip_from 172.81.131.156;
 set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.0.3.111;
-set_real_ip_from 173.249.57.253;
 set_real_ip_from 176.114.248.225;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
@@ -509,6 +508,7 @@ set_real_ip_from 185.225.69.232;
 set_real_ip_from 185.227.134.106;
 set_real_ip_from 185.227.68.78;
 set_real_ip_from 185.233.100.23;
+set_real_ip_from 185.241.208.115;
 set_real_ip_from 185.241.208.196;
 set_real_ip_from 185.241.208.202;
 set_real_ip_from 185.241.208.204;
@@ -681,7 +681,6 @@ set_real_ip_from 198.96.155.3;
 set_real_ip_from 198.98.48.31;
 set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.48.35;
-set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.50.215;
 set_real_ip_from 198.98.51.189;
 set_real_ip_from 198.98.51.249;
@@ -913,6 +912,7 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 2400:6180:100:d0::2c:3001;
@@ -943,6 +943,7 @@ set_real_ip_from 2600:3c08::f03c:94ff:fef8:9872;
 set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:fc24:12:77c0::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
@@ -962,7 +963,6 @@ set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
-set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
@@ -1101,7 +1101,6 @@ set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c206:2095:2624::1;
-set_real_ip_from 2a02:c207:3002:8283::1;
 set_real_ip_from 2a02:ec0:209:10::4;
 set_real_ip_from 2a02:ed06::222;
 set_real_ip_from 2a03:3b40:fe:3b1::1;
@@ -1445,6 +1444,7 @@ set_real_ip_from 31.133.0.26;
 set_real_ip_from 31.133.0.36;
 set_real_ip_from 31.133.1.14;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 3.229.20.55;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.120.190.85;
@@ -1460,7 +1460,6 @@ set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 44.214.207.117;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1471,9 +1470,11 @@ set_real_ip_from 45.131.65.34;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
+set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.178;
 set_real_ip_from 45.138.16.213;
+set_real_ip_from 45.138.16.222;
 set_real_ip_from 45.138.16.230;
 set_real_ip_from 45.138.16.240;
 set_real_ip_from 45.138.16.249;
@@ -1485,6 +1486,7 @@ set_real_ip_from 45.139.122.178;
 set_real_ip_from 45.139.122.179;
 set_real_ip_from 45.141.215.110;
 set_real_ip_from 45.141.215.111;
+set_real_ip_from 45.141.215.114;
 set_real_ip_from 45.141.215.167;
 set_real_ip_from 45.141.215.169;
 set_real_ip_from 45.141.215.17;
@@ -1523,6 +1525,7 @@ set_real_ip_from 45.80.208.213;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
 set_real_ip_from 45.9.148.113;
+set_real_ip_from 45.94.31.180;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.130;
 set_real_ip_from 45.95.169.223;
@@ -1641,7 +1644,6 @@ set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
 set_real_ip_from 80.82.78.14;
-set_real_ip_from 80.94.92.106;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
 set_real_ip_from 82.118.242.62;
@@ -1651,7 +1653,6 @@ set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.139.190;
-set_real_ip_from 82.68.49.227;
 set_real_ip_from 82.85.247.254;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
