--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -1,6 +1,8 @@
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
+allow 2001:1b60:2:1:3935:104:0:1;
 allow 2001:1b60:3:221:3132:102:0:1;
 allow 2001:1b60:3:221:4134:101:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
@@ -286,12 +288,15 @@ allow 2620:18c:0:192::211;
 allow 2620:18c:0:192::212;
 allow 2620:18c:0:192::213;
 allow 2620:18c:0:192::214;
+allow 2620:18c:0:192::215;
 allow 2620:18c:0:192::216;
 allow 2620:18c:0:192::218;
+allow 2620:18c:0:192::219;
 allow 2620:18c:0:192::221;
 allow 2620:18c:0:192::222;
 allow 2620:18c:0:192::223;
 allow 2620:18c:0:192::224;
+allow 2620:18c:0:192::225;
 allow 2620:18c:0:192::227;
 allow 2620:18c:0:192::228;
 allow 2620:18c:0:192::229;
@@ -307,6 +312,7 @@ allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
+allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
