--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -117,10 +117,8 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 118.163.74.160;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
-set_real_ip_from 125.253.31.196;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
@@ -164,6 +162,7 @@ set_real_ip_from 154.213.185.185;
 set_real_ip_from 154.213.185.230;
 set_real_ip_from 154.213.185.254;
 set_real_ip_from 154.26.159.157;
+set_real_ip_from 155.138.161.171;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 161.35.129.51;
@@ -210,6 +209,7 @@ set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
+set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.23;
@@ -673,7 +673,6 @@ set_real_ip_from 198.96.155.3;
 set_real_ip_from 198.98.48.31;
 set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.48.35;
-set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.50.215;
 set_real_ip_from 198.98.51.189;
 set_real_ip_from 198.98.51.249;
@@ -695,6 +694,7 @@ set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
+set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4060:a01f::12a6;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
@@ -809,7 +809,6 @@ set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:ac8:8b:22:0:1:9121:1111;
 set_real_ip_from 2001:b011:4002:37fc::b;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -997,7 +996,6 @@ set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
-set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
@@ -1169,6 +1167,7 @@ set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
+set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
