--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -1,4 +1,3 @@
-deny 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 deny 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 deny 2001:1af8:4060:a01f::12a6;
 deny 2001:1af8:4700:a114:6::1;
@@ -155,6 +154,7 @@ deny 2604:2dc0:202:300::ed3;
 deny 2604:6600:0:42::2;
 deny 2604:b480:3:6::2;
 deny 2605:2700:0:2:a800:ff:fe39:574;
+deny 2605:6400:10:1008:1111:1111:1111:1111;
 deny 2605:6400:10:1060:411f:41d8:11fe:716f;
 deny 2605:6400:10:12b:1877:e308:72b3:41b0;
 deny 2605:6400:10:1362::2;
@@ -247,7 +247,6 @@ deny 2605:6400:30:f920:f523:28ef:3617:8b86;
 deny 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 deny 2605:6400:40:fe09::2;
 deny 2605:6400:d814:1b8::4;
-deny 2605:a140:2186:5418::1;
 deny 2605:aa80:0:9::3;
 deny 2607:5300:201:3100::535e;
 deny 2607:5300:203:b45b::;
@@ -593,21 +592,6 @@ deny 2a0b:f4c2:3::88;
 deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
 deny 2a0b:f4c2::4;
-deny 2a0b:f4c2:4::100;
-deny 2a0b:f4c2:4::101;
-deny 2a0b:f4c2:4::102;
-deny 2a0b:f4c2:4::103;
-deny 2a0b:f4c2:4::104;
-deny 2a0b:f4c2:4::105;
-deny 2a0b:f4c2:4::106;
-deny 2a0b:f4c2:4::107;
-deny 2a0b:f4c2:4::108;
-deny 2a0b:f4c2:4::109;
-deny 2a0b:f4c2:4::110;
-deny 2a0b:f4c2:4::96;
-deny 2a0b:f4c2:4::97;
-deny 2a0b:f4c2:4::98;
-deny 2a0b:f4c2:4::99;
 deny 2a0b:f4c2::5;
 deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
